подправлена логика работы, добавлена валидация, тесты на разных кейсах на junit 5,Mockito,assertJ   для бэка, тесты на karma,jasmine для фронта